--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
         <script src="app/directives/delete-account-panel/delete-account-panel.js"></script>
         <script src="app/directives/appointments-table/appointments-table.js"></script>
         <script src="app/directives/navbar/navbar.js"></script>
+        <script src="app/directives/current-time/current-time.js"></script>
 
         <!-- css -->
         <link href="styles/custom.css" rel="stylesheet">
@@ -58,7 +59,7 @@
 
         <div class='container'>
             <cd-navbar></cd-navbar>
-            
+
             <!-- Main view -->
             <div ng-view></div>
         </div>
