--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
         <script src="app/directives/appointments-table/appointments-table.js"></script>
         <script src="app/directives/navbar/navbar.js"></script>
         <script src="app/directives/current-time/current-time.js"></script>
+        <script src="app/directives/user-name/user-name.js"></script>
 
         <!-- css -->
         <link href="styles/custom.css" rel="stylesheet">
