--- a/client/app/directives/navbar/navbar.html
+++ b/client/app/directives/navbar/navbar.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="navbar-brand">
-                <b>ICough</b>
+                <b>Start:</b>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
