--- a/client/app/directives/appointments-table/appointments-table.html
+++ b/client/app/directives/appointments-table/appointments-table.html
@@ -1,34 +1,45 @@
+<h1>Your appointments:</h1>
 <table class="table-hover table table-custom">
-      <tr>
-          <td ng-hide='isDoctor'>
-              <h4 >
-                  Doctor
-              </h4>
-          </td>
-          <td ng-show='isDoctor'>
-              <h4>
-                  Patient
-              </h4>
-          </td>
-          <td>
-              <h4>
-                  Time of Appointment
-              </h4>
-          </td>
-          <td>
-              <h4>Status</h4>
-          </td>
-          <td>
-              <h4>Requested</h4>
-          </td>
-      </tr>
-      <tr ng-repeat='appointment in appointmentsData'>
-          <td ng-hide='isDoctor'>Dr. {{ appointment.doctor.first_name + " "  + appointment.doctor.last_name}}</td>
-          <td ng-show='isDoctor'>{{ appointment.patient.first_name + " "  + appointment.patient.last_name }}</td>
-          <td ng-hide='displayRelative(appointment.time)'>{{ appointment.time | date : 'MMM d, y, h:mm a' }}</td>
-          <td ng-show='displayRelative(appointment.time)' data-toggle="tooltip" title="{{ appointment.time | date : 'MMM d, y, h:mm a'}}"><span am-time-ago="appointment.time"></span></td>
-          <td>{{getAppointmentStateName(appointment.state)}}</td>
-          <td ng-hide='displayRelative(appointment.created)'>{{ appointment.created | date : 'MMM d, y, h:mm a' }}</td>
-          <td ng-show='displayRelative(appointment.created)' data-toggle="tooltip" title="{{ appointment.created | date : 'MMM d, y, h:mm a'}}"><span am-time-ago="appointment.created"></span></td>
-      </tr>
-  </table>
+    <tr>
+        <td ng-hide='isDoctor'>
+            <h4 >
+                Doctor
+            </h4>
+        </td>
+        <td ng-show='isDoctor'>
+            <h4>
+                Patient
+            </h4>
+        </td>
+        <td ng-click='setOrdering("time")'>
+            <h4>
+                <span ng-show='queryParams.ordering=="time"' class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+                <span ng-show='queryParams.ordering=="-time"' class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                Time of Appointment
+            </h4>
+        </td>
+        <td>
+            <h4>Status</h4>
+        </td>
+        <td ng-click='setOrdering("created")'>
+            <h4>
+              <span ng-show='queryParams.ordering=="created"' class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
+              <span ng-show='queryParams.ordering=="-created"' class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+              Requested</h4>
+        </td>
+    </tr>
+    <tr ng-repeat='appointment in appointmentsData'>
+        <td ng-hide='isDoctor'>Dr.
+            {{ appointment.doctor.first_name + " "  + appointment.doctor.last_name}}</td>
+        <td ng-show='isDoctor'>{{ appointment.patient.first_name + " "  + appointment.patient.last_name }}</td>
+        <td ng-hide='displayRelative(appointment.time)'>{{ appointment.time | date : 'MMM d, y, h:mm a' }}</td>
+        <td ng-show='displayRelative(appointment.time)' data-toggle="tooltip" title="{{ appointment.time | date : 'MMM d, y, h:mm a'}}">
+            <span am-time-ago="appointment.time"></span>
+        </td>
+        <td>{{getAppointmentStateName(appointment.state)}}</td>
+        <td ng-hide='displayRelative(appointment.created)'>{{ appointment.created | date : 'MMM d, y, h:mm a' }}</td>
+        <td ng-show='displayRelative(appointment.created)' data-toggle="tooltip" title="{{ appointment.created | date : 'MMM d, y, h:mm a'}}">
+            <span am-time-ago="appointment.created"></span>
+        </td>
+    </tr>
+</table>
