--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
         <script src="app/directives/navbar/navbar.js"></script>
         <script src="app/directives/current-time/current-time.js"></script>
         <script src="app/directives/user-name/user-name.js"></script>
+        <script src="app/directives/appointment-request-panel/appointment-request-panel.js"></script>
 
         <!-- css -->
         <link href="styles/custom.css" rel="stylesheet">
