--- a/client/app/directives/appointments-table/appointments-table.html
+++ b/client/app/directives/appointments-table/appointments-table.html
@@ -1,33 +1,35 @@
 <h1>Your appointments:</h1>
 <table class="table-hover table table-custom">
+
     <tr>
         <td ng-hide='isDoctor'>
             <h4 >
-                Doctor
+              <b>Doctor</b>
             </h4>
         </td>
         <td ng-show='isDoctor'>
             <h4>
-                Patient
+                <b>Patient</b>
             </h4>
         </td>
         <td ng-click='setOrdering("time")'>
             <h4>
                 <span ng-show='queryParams.ordering=="time"' class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
                 <span ng-show='queryParams.ordering=="-time"' class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-                Time of Appointment
+                <b>Time of Appointment</b>
             </h4>
         </td>
         <td>
-            <h4>Status</h4>
+            <h4><b>Status</b></h4>
         </td>
         <td ng-click='setOrdering("created")'>
             <h4>
               <span ng-show='queryParams.ordering=="created"' class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span>
               <span ng-show='queryParams.ordering=="-created"' class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-              Requested</h4>
+              <b>Requested</b></h4>
         </td>
     </tr>
+
     <tr ng-repeat='appointment in appointmentsData'>
         <td ng-hide='isDoctor'>Dr.
             {{ appointment.doctor.first_name + " "  + appointment.doctor.last_name}}</td>
