--- a/client/app/directives/appointment-request-panel/appointment-request-panel.html
+++ b/client/app/directives/appointment-request-panel/appointment-request-panel.html
@@ -1,11 +1,50 @@
 <div ng-hide='isDoctor'>
-  <div class='panel panel-info'>
+    <div class='panel panel-info'>
         <div class="panel-heading">
             <h3 class="text-center">Request form</h3>
         </div>
         <div class='panel-body'>
-            This is the body
-        </div>
-    </div>
+            <form name='appointmentRequestForm'>
+                <div class='form-group'>
+                    <label>
+                        <h4>Choose a day:</h4>
+                    </label>
+                    <div>
+                        <div style="display:inline-block; min-height:290px;">
+                            <div uib-datepicker ng-model="date" class="well well-sm" datepicker-options="datepickerOptions"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class='form-group'>
+                    <label>
+                        <h4>Select time slot:</h4>
+                    </label>
+                    <div>
+                        <div style="display:inline-block">
+                            <div class='well well-sm' uib-timepicker ng-model="time" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="true"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class='form-group'>
+                    <label>
+                        <h4>Pick a doctor</h4>
+                    </label>
+                    <select class='form-control' ng-options="doctor as ('Dr. ' + doctor.name) for doctor in doctors track by doctor.id" ng-model="doctor"></select>
+                </div>
+                <div class='well, well-sm lead'>
+                    <h4>Request details:
+                    </h4>
+                    Doctor:
+                    {{ doctor.name }}
+                    <br/>
+                    Time:
+                    {{date.toString().substr(0,16) + time.toString().substr(16,40) | amDateFormat:'MMM Do YYYY, h:mm a' }}
+                </div>
 
-</div>
+                <div class='text-center'>
+                    <button class="btn btn-primary btn-lg" ng-disabled='appointmentRequestForm.$invalid'>Submit request</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
