--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
         <script src="node_modules/angular-cookies/angular-cookies.min.js"></script>
         <script src="node_modules/moment/moment.js"></script>
         <script src="node_modules/angular-moment/angular-moment.js"></script>
+        <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+        <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 
         <!-- Google sign-in -->
         <script src="https://apis.google.com/js/client:platform.js" async defer></script>
