--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
         <script src="app/services/auth-service/auth-service.js"></script>
         <script src="app/services/register-service/register-service.js"></script>
         <script src="app/services/account-service/account-service.js"></script>
+        <script src="app/services/doctors-service/doctors-service.js"></script>
 
         <!-- app directives -->
         <script src="app/directives/login-panel/login-panel.js"></script>
