--- a/client/app/directives/appointment-request-panel/appointment-request-panel.html
+++ b/client/app/directives/appointment-request-panel/appointment-request-panel.html
@@ -5,19 +5,19 @@
         </div>
         <div class='panel-body'>
             <form name='appointmentRequestForm'>
-                <div class='form-group'>
+                <div class='form-group text-center'>
                     <label>
-                        <h4>Choose a day</h4>
+                        <h4>1. Choose a date</h4>
                     </label>
                     <div>
-                        <div style="display:inline-block; min-height:290px;">
-                            <div uib-datepicker ng-required='true' ng-change='changed()'  ng-model="date" class="well well-sm" datepicker-options="datepickerOptions"></div>
+                        <div style="display:inline-block; min-height:290px; margin:auto;">
+                            <div uib-datepicker ng-required='true' ng-change='changed()' ng-model="date" class="well well-sm" datepicker-options="datepickerOptions"></div>
                         </div>
                     </div>
                 </div>
-                <div class='form-group'>
+                <div class='form-group text-center'>
                     <label>
-                        <h4>Select time slot</h4>
+                        <h4>2. Pick time slot</h4>
                     </label>
                     <div>
                         <div style="display:inline-block">
@@ -25,26 +25,27 @@
                         </div>
                     </div>
                 </div>
-                <div class='form-group'>
+                <div class='form-group text-center'>
                     <label>
-                        <h4>Select a doctor</h4>
+                        <h4>3. Select your doctor</h4>
                     </label>
                     <select ng-required='true' class='form-control' ng-options="doctor as ('Dr. ' + doctor.first_name + ' ' + doctor.last_name) for doctor in doctors track by doctor.id" ng-model="doctor"></select>
                 </div>
-                <div class='well, well-sm lead'>
-                    <h4>Request details:
-                    </h4>
-                    Doctor:
-                    {{ doctor.first_name + " " + doctor.last_name }}
-                    <br/>
-                    Time:
-                    {{ datetime | amDateFormat:'MMM Do YYYY, h:mm a' }}
-                </div>
-
-                <div class='text-center'>
-                    <button class="btn btn-primary btn-lg" ng-click='requestAppointment()' ng-disabled='appointmentRequestForm.$invalid'>Submit request</button>
-                </div>
+            </form>
+            <hr />
+            <div class='well well-sm lead'>
+                <span class='h4'>Request summary</span><br />
+                Doctor:
+                {{ doctor.first_name + " " + doctor.last_name }}
+                <br/>
+                Time:
+                {{ datetime | amDateFormat:'MMM Do YYYY, h:mm a' }}
+            </div>
+            <hr />
+            <div class='text-center'>
+                <button class="btn btn-primary btn-lg" ng-click='requestAppointment()' ng-disabled='appointmentRequestForm.$invalid'>Submit request</button>
             </div>
         </div>
-
     </div>
+
+</div>
