Added request table directive

--- a/client/index.html
+++ b/client/index.html
@@ -50,6 +50,7 @@
         <script src="app/directives/user-name/user-name.js"></script>
         <script src="app/directives/appointment-request-panel/appointment-request-panel.js"></script>
         <script src="app/directives/appointments-table-home/appointments-table-home.js"></script>
+        <script src="app/directives/review-requests-table/review-requests-table.js"></script>
 
         <!-- css -->
         <link href="styles/custom.css" rel="stylesheet">
