Hanging code out to DRY (refactor)

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,9 @@
         <script src="app/configs.js"></script>
         <script src="app/routing.js"></script>
 
+        <!-- app controllers -->
+        <script src='app/controllers/appointments-table-controller/appointments-table-controller.js'></script>
+
         <!-- app services -->
         <script src="app/services/auth-service/auth-service.js"></script>
         <script src="app/services/register-service/register-service.js"></script>
