--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
 
         <!-- app controllers -->
         <script src='app/controllers/appointments-table-controller/appointments-table-controller.js'></script>
+        <script src='app/controllers/datepicking-controller/datepicking-controller.js'></script>
 
         <!-- app services -->
         <script src="app/services/auth-service/auth-service.js"></script>
