Added spec for navbar

--- a/client/app/directives/navbar/navbar.html
+++ b/client/app/directives/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default  h4" ng-show='showNavbar'>
+<nav id='navbar-root' class="navbar navbar-default  h4" ng-show='showNavbar'>
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
