--- a/client/app/directives/appointment-request-panel/appointment-request-panel.html
+++ b/client/app/directives/appointment-request-panel/appointment-request-panel.html
@@ -1,4 +1,4 @@
-<div ng-hide='isDoctor'>
+<div ng-hide='isDoctor' id='appointment-request-panel-root'>
     <div class='panel panel-info'>
         <div class="panel-heading">
             <h3 class="text-center">Request form</h3>
